methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:15: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime27.MethodsReturning'
override def run() {
             ^